# StanzaFlow

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  phase-1-todo.md  pyproject.toml  repomix-output.xml  test_secrets.sf.mdTEST_SECRET=my_secret_value
.cursor/rules/: docs_sources.mdc  stanzaflow.mdc
.github/workflows/: ci.yaml
docs/: overview.md
docs/archive/: phase-1-todo.md
docs_sources/: gha-uv-recipes.md  sandboxing-notes.md  stanzaflow-overview.md  stanzaflow-roadmap.md
stanzaflow/: __init__.py  __main__.py  console.py
stanzaflow/adapters/: __init__.py  base.py
stanzaflow/adapters/langgraph/: __init__.py  adapter.py  emit.py
stanzaflow/cli/: __init__.py  main.py
stanzaflow/core/: __init__.py  ai_escape.py  ast.py  exceptions.py  ir.py  secrets.py  stz_grammar.lark
stanzaflow/schemas/: ir-0.2.json
stanzaflow/tools/: __init__.py  audit.py  graph.py
tests/: __init__.py  test_adapters.py  test_ai_escape.py  test_audit.py  test_cli.py  test_emitter.py  test_exceptions.py  test_ir.py  test_langgraph_adapter.py  test_parser.py  test_secrets.py  test_stable_ids.py  test_tools.py
tests/fixtures/: simple_workflow.sf.md  simple_workflow_no_attrs.sf.langgraph.py  simple_workflow_no_attrs.sf.md  ticket_triage.ir.json  ticket_triage.sf.md
tools/: bootstrap_docs.sh
