[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stanzaflow"
dynamic = ["version"]
description = "Write workflows the way you write stanzas"
authors = [
    {name = "StanzaFlow Team", email = "team@stanzaflow.org"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
]
keywords = ["workflow", "agent", "dsl", "compiler", "markdown"]

dependencies = [
    "lark>=1.1.8",
    "typer>=0.9.0",
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.0.0",
    "mdformat>=0.7.0",
    "diagrams>=0.23.0",  # Graphviz fallback
]

[project.scripts]
stanzaflow = "stanzaflow.cli.main:app"
stz = "stanzaflow.cli.main:app"

[project.urls]
Homepage = "https://github.com/stanzaflow/stanzaflow"
Documentation = "https://github.com/stanzaflow/stanzaflow/docs"
Repository = "https://github.com/stanzaflow/stanzaflow"
Issues = "https://github.com/stanzaflow/stanzaflow/issues"

[tool.hatch.version]
path = "stanzaflow/__init__.py"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.isort]
known-first-party = ["stanzaflow"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=stanzaflow",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=90",
]

[tool.coverage.run]
source = ["stanzaflow"]
omit = [
    "tests/*",
    "stanzaflow/cli/*",
    "stanzaflow/tools/*",
    "stanzaflow/adapters/*",
    "stanzaflow/core/exceptions.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
] 